--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,21 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+steps:
+- script: dotnet restore
+  displayName: 'dotnet publish'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet publish'
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
+
+- task: PublishBuildArtifacts@1
+  displayName: 'publish artifacts'
