--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,22 @@ steps:
 - script: dotnet restore
   displayName: 'dotnet publish'
 
-- task: ndepend.ndependextension.ndepend-task.NDependTask@1
-  displayName: 'NDependTask '
-  env:
-   SYSTEM_ACCESSTOKEN: $(system.accesstoken)
 
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: test
+    projects: '**/*Tests/*.csproj'
+    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
+
+# do this after your tests have run
+- script: dotnet test <test-project> --logger trx --collect "Code coverage"
+- task: PublishTestResults@2
+  inputs:
+    testRunner: VSTest
+    testResultsFiles: '**/*.trx'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet publish'
