--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,25 +12,17 @@ pool:
 variables:
   buildConfiguration: 'Release'
 steps:
+- task: NuGetToolInstaller@0
+
+- task: NuGetCommand@2
+  inputs:
+    restoreSolution: '$(solution)'
+    
 - script: dotnet restore
   displayName: 'dotnet publish'
 
-
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: test
-    projects: '**/*Tests/*.csproj'
-    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
-
-# do this after your tests have run
-- script: dotnet test <test-project> --logger trx --collect "Code coverage"
-- task: PublishTestResults@2
-  inputs:
-    testRunner: VSTest
-    testResultsFiles: '**/*.trx'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet publish'
