Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,4 +35,14 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
   
+- task: NuGetCommand@2
+  inputs:
+    command: pack
+    packagesToPack: '**/*.csproj'
 
+- task: NuGetCommand@2
+  displayName: 'NuGet push'
+  inputs:
+    command: push
+    publishVstsFeed: 'teamfeed'
+    allowPackageConflicts: true
