--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,10 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  Major: '1'
+  Minor: '0'
+  Patch: '0'
+  
 steps:
 - task: NuGetToolInstaller@0
 
@@ -34,11 +38,20 @@ steps:
 
 - task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
-  
+
 - task: NuGetCommand@2
   inputs:
     command: pack
     packagesToPack: '**/*.csproj'
+
+- task: NuGetCommand@2
+  inputs:
+    command: pack
+    versioningScheme: byPrereleaseNumber
+    majorVersion: '$(Major)'
+    minorVersion: '$(Minor)'
+    patchVersion: '$(Patch)'
+
 
 - task: NuGetCommand@2
   displayName: 'NuGet push'
