--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ variables:
 steps:
 - task: NuGetToolInstaller@0
 
-- task: NuGetCommand@2
+- task: NuGetCommand@1
   inputs:
     restoreSolution: '$(solution)'
 
@@ -27,12 +27,12 @@ steps:
     command: restore
     packagesToPack: '**/*.csproj'
 
-- task: DotNetCoreCLI@2
+- task: DotNetCoreCLI@3
   inputs:
     command: pack
-    configuration: 'release'
+    configuration: release
 
-- task: NuGetCommand@2
+- task: NuGetCommand@3
   inputs:
     command: pack
     versioningScheme: byPrereleaseNumber
@@ -57,7 +57,7 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
 
-- task: NuGetCommand@2
+- task: NuGetCommand@4
   displayName: 'NuGet push'
   inputs:
     command: push
