--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,11 @@ steps:
     command: restore
     packagesToPack: '**/*.csproj'
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: pack
+    configuration: 'release'
+
 - task: NuGetCommand@2
   inputs:
     command: pack
