--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: pack
-    configuration: 'release'
+    packagesToPack: '**/*.csproj'
 
 - task: NuGetCommand@2
   inputs:
